userService/src/main/java/com/example/userService/exception/commonException/error/ErrorCode.java
package com.example.userService.exception.commonException.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {

    HttpStatus getHttpStatus();
    String getMessage();
}
